--- a/main.Rmd
+++ b/main.Rmd
@@ -237,20 +237,28 @@ From the plot we can see that, as the number of bins increase, the MISE differen
 This could be explained by the fact that smaller sample sizes are less likely to capture the necessary variance which is more likely to result in a skewed histogram when it has few bins.
 
 ```{r}
-plot(NULL,
-     xlim = c(min(bins_values), max(bins_values)),
-     ylim = c(min(data_group$mise_diff_mean), max(data_group$mise_diff_mean)),
-     ylab = "Mean MISE Differences",
-     xlab = "Number of bins",
-     main = paste("Mean MISE differences over", M, "simulations"))
-lines(data1$bins, data1$mise_diff_mean, type = "l", lwd = lwd, col = colours[1])
-lines(data2$bins, data2$mise_diff_mean, type = "l", lwd = lwd, col = colours[2])
-lines(data3$bins, data3$mise_diff_mean, type = "l", lwd = lwd, col = colours[3])
-lines(data4$bins, data4$mise_diff_mean, type = "l", lwd = lwd, col = colours[4])
-legend("topright", 
-       legend=legend_names,
-       col = colours,
-       lwd = lwd)
+plot_n_eps = function(mise_data) {
+  mise_data_1 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.)
+  mise_data_2 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.001)
+  mise_data_3 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.1)
+  mise_data_4 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.001)
+  
+  plot(NULL,
+       xlim = c(min(bins_values), max(bins_values)),
+       ylim = c(min(mise_data$mise_diff_mean), max(mise_data$mise_diff_mean)),
+       ylab = "Mean MISE Differences",
+       xlab = "Number of bins",
+       main = paste("Mean MISE differences over", M, "simulations"))
+  lines(mise_data_1$bins, mise_data_1$mise_diff_mean, type = "l", lwd = lwd, col = colours[1])
+  lines(mise_data_2$bins, mise_data_2$mise_diff_mean, type = "l", lwd = lwd, col = colours[2])
+  lines(mise_data_3$bins, mise_data_3$mise_diff_mean, type = "l", lwd = lwd, col = colours[3])
+  lines(mise_data_4$bins, mise_data_4$mise_diff_mean, type = "l", lwd = lwd, col = colours[4])
+  legend("topright", 
+         legend=legend_names,
+         col = colours,
+         lwd = lwd)
+}
+plot_n_eps(data_group)
 ```
 
 ### Original Mise Variation
@@ -258,10 +266,9 @@ legend("topright",
 In the 4 plots below we see the average: \* MISE value for the original histogram. \* MISE value for the perturbed histogram. \* Absolute difference between the MISE for the original histogram and MISE for the perturbed histogram.
 
 #### Function for a single plot
-This function plots a line plot with three lines:
-* mean of the original MISE
-* mean of the merturbed MISE
-* mean of the MISE difference
+
+This function plots a line plot with three lines: \* mean of the original MISE \* mean of the merturbed MISE \* mean of the MISE difference
+
 ```{r}
 plot_mise_values = function(mise_data, main, sub, colours, lwd = 3) {
   
@@ -280,7 +287,9 @@ plot_mise_values = function(mise_data, main, sub, colours, lwd = 3) {
 ```
 
 #### Plotting
+
 The absolute differences shown in the 4 plots correspond to the lines in the previous plot. By also plotting the MISE values for the original and perturbed histogram, we can compare them easier than if we had just plotted the absolute difference. For example, for a sample size $n = 1000$, we can see that the original MISE is close to $0$ whereas the MISE of the perturbed stabilises around $2$.
+
 ```{r}
 line_colours = rainbow_hcl(3)
 
@@ -307,7 +316,7 @@ legend("center",
 
 ```
 
-# 2.2 Samplng from a different distribution
+# 2.2 Sampling from a different distribution
 
 We now sample from: $$
 p_X(x) = \pi \cdot \text{dbeta}(x | \alpha_1, \beta_1) + (1 -\pi )\cdot \text{dbeta}(x | \alpha_2, \beta_2)
@@ -318,7 +327,9 @@ func = function(n, pi =.5) pi * rbeta(n,.5,.3) + (1 - pi) * rbeta(n,.5,.1)
 h=hist(func(1000), plot=F)
 plot(h, main='Density of p[X]',xlab = '')
 ```
+
 ## Perturbed Histogram
+
 ```{r}
 h_perturbed=l_perturbe(h)
 
@@ -326,10 +337,11 @@ plot(h_perturbed, main='Perturbed Histogram of p[X]', xlab='')
 ```
 
 ## Run Simulation
-We will run the simulation with the same parameters for $n$, $\epsilon$ and $m$ and for the same number of times $M$. We also have $\pi$ as an additional parameter.
+
+We will run the simulation with the same parameters for $n$, $\epsilon$ and $m$ and for the same number of times $M$. We also have $\pi \; \epsilon \; \{0.25, 0.5, 0.75\}$ as an additional parameter.
 
 ```{r}
-pi_values<-c(.25,.5,.75)
+pi_values = c(.25,.5,.75)
 out_new = data.frame()
 
 hyperparameter_grid = expand.grid(n = n_values, bins = bins_values, eps = eps_values, pi = pi_values)
@@ -347,12 +359,23 @@ for (n in n_values) {
 }
 ```
 
-
 ## Plotting
-```{r}
-# 1. absolute difference
-out_new$mise_diff = abs(out_new$mise_original - out_new$mise_perturbed)
 
+Like in the plots for question 2.1, we will show how the absolute difference between the two calculated $MISE$ values varies across the different combinations of hyper parameters.
+
+### MISE Difference
+
+First, we calculate the absolute difference between the original and perturbed $MISE$.
+
+```{r}
+out_new$mise_diff = abs(out_new$mise_original - out_new$mise_perturbed)
+```
+
+### Group Data
+
+Then, we group the data, however this time we also group on $\pi$ in addition to the other parameters.
+
+```{r}
 out_new
 # 2. group data
 data_group_pi <- out_new %>%                                 
@@ -369,38 +392,23 @@ data_group_pi <- out_new %>%
   as.data.frame()
 
 data_group_pi
+```
 
-# 3. Get subsets.
+### Subset Data
 
+Finally, we create one subset of the data for each value of $\pi$. We do this because splitting the data across three plots, each with their own $\pi$, makes the visualisation more readable.
 
-subset_and_plot = function(mise_data) {
-  mise_data_1 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.)
-  mise_data_2 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.001)
-  mise_data_3 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.1)
-  mise_data_4 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.001)
-  
-  plot(NULL,
-       xlim = c(min(bins_values), max(bins_values)),
-       ylim = c(min(mise_data$mise_diff_mean), max(mise_data$mise_diff_mean)),
-       ylab = "Mean MISE Differences",
-       xlab = "Number of bins",
-       main = paste("Mean MISE differences over", M, "simulations"))
-  lines(mise_data_1$bins, mise_data_1$mise_diff_mean, type = "l", lwd = lwd, col = colours[1])
-  lines(mise_data_2$bins, mise_data_2$mise_diff_mean, type = "l", lwd = lwd, col = colours[2])
-  lines(mise_data_3$bins, mise_data_3$mise_diff_mean, type = "l", lwd = lwd, col = colours[3])
-  lines(mise_data_4$bins, mise_data_4$mise_diff_mean, type = "l", lwd = lwd, col = colours[4])
-  legend("topright", 
-         legend=legend_names,
-         col = colours,
-         lwd = lwd)
-}
-
+```{r}
 pi_025 = subset(data_group_pi, data_group_pi$pi == 0.25)
 pi_05 = subset(data_group_pi, data_group_pi$pi == 0.5)
 pi_075 = subset(data_group_pi, data_group_pi$pi == 0.75)
+```
 
-subset_and_plot(pi_025)
-subset_and_plot(pi_05)
-subset_and_plot(pi_075)
+### Plot
 
+```{r}
+layout(matrix(c(1, 2, 3), ncol=1, nrow=3), heights=c(10, 10, 10), TRUE) 
+plot_n_eps(pi_025)
+plot_n_eps(pi_05)
+plot_n_eps(pi_075)
 ```
