--- a/main.Rmd
+++ b/main.Rmd
@@ -87,7 +87,7 @@ Plot the peturbed histogram. We can see that it is more sparse than the original
 
 ```{r}
 perturbed_hist = l_perturbe(original_hist, l_scale = 8 / (eps^2))
-plot(perturbed_hist)
+plot(perturbed_hist, freq=F)
 
 ```
 
@@ -325,7 +325,8 @@ $$
 ```{r}
 func = function(n, pi =.5) pi * rbeta(n,.5,.3) + (1 - pi) * rbeta(n,.5,.1)
 h=hist(func(1000), plot=F)
-plot(h, main='Density of p[X]',xlab = '')
+plot(h, main='Density of
+     p[X]',xlab = '', freq=F)
 ```
 
 ## Perturbed Histogram
@@ -333,7 +334,7 @@ plot(h, main='Density of p[X]',xlab = '')
 ```{r}
 h_perturbed=l_perturbe(h)
 
-plot(h_perturbed, main='Perturbed Histogram of p[X]', xlab='')
+plot(h_perturbed, main='Perturbed Histogram of p[X]', xlab='', freq=F)
 ```
 
 ## Run Simulation
