--- a/main.Rmd
+++ b/main.Rmd
@@ -87,9 +87,9 @@ Plot the peturbed histogram. We can see that it is more sparse than the original
 
 ```{r}
 perturbed_hist = l_perturbe(original_hist, variance = 8 / (eps^2))
-plot(perturbed_hist, 
-     freq=F, 
-     main='Perturbed Hihstogram')
+plot(perturbed_hist,
+     freq=F,
+     main='Perturbed Histogram')
 ```
 
 ## Simulation {#simulation}
@@ -193,77 +193,24 @@ There are 3 steps in the data preparation process:
 
 ```{r}
 
-# 1. absolute difference
-sim_data$mise_diff = abs(sim_data$mise_original - sim_data$mise_perturbed)
-
 # 2. group data
-data_group <- sim_data %>%                                 
+mise_data_group <- sim_data %>%
   group_by(eps, n, bins) %>%
-  dplyr::summarize(mise_diff_mean = mean(mise_diff), 
-                   mise_diff_min = min(mise_diff), 
-                   mise_diff_max = max(mise_diff),
-                   mise_original_mean = mean(mise_original),
+  dplyr::summarize(mise_original_mean = mean(mise_original),
                    mise_original_min = min(mise_original),
                    mise_original_max = max(mise_original),
                    mise_perturbed_mean = mean(mise_perturbed),
                    mise_perturbed_min = min(mise_perturbed),
                    mise_perturbed_max = max(mise_perturbed)) %>% 
   as.data.frame()
-
-# 3. Get subsets.
-data1 = subset(data_group, data_group$n == 100 & data_group$eps == 0.1)
-data2 = subset(data_group, data_group$n == 100 & data_group$eps == 0.001)
-data3 = subset(data_group, data_group$n == 1000 & data_group$eps == 0.1)
-data4 = subset(data_group, data_group$n == 1000 & data_group$eps == 0.001)
 ```
 
 #### Parameters for plotting
 
 ```{r}
-colours = rainbow_hcl(4)
+colours = rainbow_hcl(2)
 lwd = 4
 legend_names = c("n = 100, eps = 0.1", "n = 100, eps = 0.001", "n = 1000, eps = 0.1", "n = 1000, eps = 0.001")
-```
-
-#### Plot for MISE Differences
-
-The plot below shows the absolute differences between the MISE value for the original histogram and the MISE value for the perturbed histogram.
-
-$$|MISE(p_X, \hat{p}_{n,m}) - MISE(p_X, \hat{q}_{\epsilon, m})|$$
-
-Each line in the plot represents the absolute MISE difference for a specific combination of the number of samples from the Beta distribution $n$ and the privacy value epsilon $\epsilon$, averaged over $M$ simulations.
-
-From the plot we can see that, as the number of bins increase, the MISE difference converges. The difference starts off high for the smallest number of bins, $5$. Using $10$ bins already substantially minimises the difference and as the number of bins grows, it only decreases minimally.
-
-We also observe that the $MISE$ difference starts higher for the larger sample size $n=1000$, between $8$ and $10$, than for the smaller sample size $n=100$, around $6$.
-
-This plot does not tell the whole story however, as the difference only tells us whether the original $MISE$ and perturbed $MISE$ are approaching each other, but not the actual $MISE$ values. As the next plot will show, the sample size $n$ does have an effect on the original $MISE$ value.
-
-
-```{r}
-plot_n_eps = function(mise_data, colours, subtitle = NULL) {
-  mise_data_1 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.1)
-  mise_data_2 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.001)
-  mise_data_3 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.1)
-  mise_data_4 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.001)
-  
-  plot(NULL,
-       xlim = c(min(bins_values), max(bins_values)),
-       ylim = c(min(mise_data$mise_diff_mean), max(mise_data$mise_diff_mean)),
-       ylab = "Mean MISE Differences",
-       xlab = "Number of bins",
-       main = paste("Mean MISE differences over", M, "simulations"),
-       sub = subtitle)
-  lines(mise_data_1$bins, mise_data_1$mise_diff_mean, type = "l", lwd = lwd, col = colours[1])
-  lines(mise_data_2$bins, mise_data_2$mise_diff_mean, type = "l", lwd = lwd, col = colours[2])
-  lines(mise_data_3$bins, mise_data_3$mise_diff_mean, type = "l", lwd = lwd, col = colours[3])
-  lines(mise_data_4$bins, mise_data_4$mise_diff_mean, type = "l", lwd = lwd, col = colours[4])
-  legend("topright", 
-         legend=legend_names,
-         col = colours,
-         lwd = lwd)
-}
-plot_n_eps(data_group, colours)
 ```
 
 ### Original Mise Variation
@@ -272,12 +219,12 @@ In the 4 plots below we see the average: \* MISE value for the original histogra
 
 #### Function for a single plot
 
-This function plots a line plot with three lines: \* mean of the original MISE \* mean of the merturbed MISE \* mean of the MISE difference
+This function plots a line plot with three lines: \* mean of the original MISE \* mean of the perturbed MISE \* mean of the MISE difference
 
 ```{r}
 plot_mise_values = function(mise_data, main, sub, colours, lwd = 3) {
   
-  max_y = max(c(mise_data$mise_original_mean, mise_data$mise_perturbed_mean, mise_data$mise_diff_mean))
+  max_y = max(c(mise_data$mise_original_mean, mise_data$mise_perturbed_mean))
   plot(NULL,
      xlim = c(min(bins_values), max(bins_values)),
      ylim = c(0, max_y),
@@ -287,41 +234,53 @@ plot_mise_values = function(mise_data, main, sub, colours, lwd = 3) {
      sub = sub)
   lines(mise_data$bins, mise_data$mise_original_mean, type = "l", lwd = lwd, col = colours[1])
   lines(mise_data$bins, mise_data$mise_perturbed_mean, type = "l", lwd = lwd, col = colours[2])
-  lines(mise_data$bins, mise_data$mise_diff_mean, type = "l", lwd = lwd, col = colours[3])
 }
 ```
 
 #### Plotting
+The 4 plots below show the:
+* original $MISE$
+* perturbed $MISE$
 
-The absolute differences shown in the 4 plots correspond to the lines in the previous plot. By also plotting the MISE values for the original and perturbed histogram, we can compare them easier than if we had just plotted the absolute difference. For example, for a sample size $n = 1000$, we can see that the original MISE is close to $0$ whereas the MISE of the perturbed stabilises around $2$. For this reason, the perturbed $MISE$ and $MISE$ difference are almost identical for the larger sampl size $n=1000$.
+for the 4 combinations of the sample sizes $n \: \in \: \{100, 1000}$ and the epsilon values $\epsilon \: \in \{0.001, 0.1\}$.
 
-Here we can also see that for the larger sample size of $n=1000$, the original $MISE$ is constant around $0$ whereas the original $MISE$ for the smaller sample size $n=100$ actually increases to around $1$. This explains why the $MISE$ difference for the smaller sample size $n=100$ in the first plot is actually lower than the one for the large sample size $n=1000$. 
+For a small privacy ratio $\epsilon = 0.001$, we can see that the $MISE$ of the perturbed histogram initially has a higher value that for a privacy ratio of $\epsilon = 0.1$. Also, a larger the sample size $n$ for the perturbed $MISE$ also corresponds to a higher initial $MISE$ when comparing values that have the same value for $\epsilon$. E.g. For $\epsilon = 0.001$, the perturbed $MISE$ for the sample size $n = 100$ starts at around $6$, whereas the perturbed $MISE$ for the sample size $n = 1000$ starts at around $10$. For small sample sizes $n = 100$, both the original $MISE$ starts off close to $0$, however with an increase in the number of bins, it approaches $1$.
 
-It is due to the fact that the perturbed $MISE$ values converge at around $10$ bins for all sample sizes and epsilon values but the original $MISE$ value increasing for the smaller sample size $n=100$. Hence, we have a smaller difference between the original and perturbed $MISE$ for these hyperparameters.
+One thing that is common across all 4 plots is that there is a decrease in the perturbed $MISE$ when moving from $5$ to $10$ bins. For $MISE$ that have $\epsilon = 0.1$, this initial decrease is then followed by a steady increase.
 
 ```{r}
-line_colours = rainbow_hcl(3)
 
-# Create a layout for the 4 plots and the common legend
-layout(matrix(c(1,2,5,3,4,5), ncol=2, nrow=3), heights=c(6, 6, 2))
+plot_n_eps = function(mise_data) {
+  line_colours = rainbow_hcl(2)
 
-# Plot the 4 plots
-plot_mise_values(data1, paste("MISE values over", M, "Simulations."), "n = 100, eps = 0.1.", line_colours)
-plot_mise_values(data2, paste("MISE values over", M, "Simulations."), "n = 100, eps = 0.001.", line_colours)
-plot_mise_values(data3, paste("MISE values over", M, "Simulations."), "n = 1000, eps = 0.1", line_colours)
-plot_mise_values(data4, paste("MISE values over", M, "Simulations."), "n = 1000, eps = 0.001.", line_colours)
+  mise_data_1 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.1)
+  mise_data_2 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.001)
+  mise_data_3 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.1)
+  mise_data_4 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.001)
 
-# Plot the legend
-par(mai=c(0,0,0,0))
-plot.new()
-legend("center",
-       legend = c(TeX("$MISE(p_X, \\hat{p}_{n,m})$"), TeX("$MISE(p_X, \\hat{q}_{\\epsilon, m})$"), TeX("$|(MISE(p_X, \\hat{p}_{n,m}) - MISE(p_X, \\hat{q}_{\\epsilon, m})|$")),
-       col = colours,
-       lwd = 3, 
-       xpd = TRUE, 
-       horiz = TRUE, 
-       cex = 1, 
-       seg.len=2)
+  # Create a layout for the 4 plots and the common legend
+  layout(matrix(c(1,2,5,3,4,5), ncol=2, nrow=3), heights=c(6, 6, 2))
+
+  # Plot the 4 plots
+  plot_mise_values(mise_data_1, paste("MISE values over", M, "Simulations."), "n = 100, eps = 0.1.", line_colours)
+  plot_mise_values(mise_data_2, paste("MISE values over", M, "Simulations."), "n = 100, eps = 0.001.", line_colours)
+  plot_mise_values(mise_data_3, paste("MISE values over", M, "Simulations."), "n = 1000, eps = 0.1", line_colours)
+  plot_mise_values(mise_data_4, paste("MISE values over", M, "Simulations."), "n = 1000, eps = 0.001.", line_colours)
+
+  # Plot the legend
+  par(mai=c(0,0,0,0))
+  plot.new()
+  legend("center",
+         legend = c(TeX("$MISE(p_X, \\hat{p}_{n,m})$"), TeX("$MISE(p_X, \\hat{q}_{\\epsilon, m})$")),
+         col = colours,
+         lwd = 3,
+         xpd = TRUE,
+         horiz = TRUE,
+         cex = 1,
+         seg.len=2)
+}
+
+plot_n_eps(mise_data_group)
 
 ```
 
@@ -371,37 +330,23 @@ for (n in n_values) {
 
 ## Plotting
 
-Like in the plots for question 2.1, we will show how the absolute difference between the two calculated $MISE$ values varies across the different combinations of hyper parameters.
+Like in the plots for question 2.1, we will show how the two calculated $MISE$ values vary across the different combinations of hyper parameters.
 
-### MISE Difference
-
-First, we calculate the absolute difference between the original and perturbed $MISE$.
-
-```{r}
-out_new$mise_diff = abs(out_new$mise_original - out_new$mise_perturbed)
-```
 
 ### Group Data
-
-Then, we group the data, however this time we also group on $\pi$ in addition to the other parameters.
+First, we group the data, however this time we also group on $\pi$ in addition to the other parameters.
 
 ```{r}
-out_new
 # 2. group data
-data_group_pi <- out_new %>%                                 
+mise_data_group_pi <- out_new %>%
   group_by(eps, n, bins, pi) %>%
-  dplyr::summarize(mise_diff_mean = mean(mise_diff), 
-                   mise_diff_min = min(mise_diff), 
-                   mise_diff_max = max(mise_diff),
-                   mise_original_mean = mean(mise_original),
+  dplyr::summarize(mise_original_mean = mean(mise_original),
                    mise_original_min = min(mise_original),
                    mise_original_max = max(mise_original),
                    mise_perturbed_mean = mean(mise_perturbed),
                    mise_perturbed_min = min(mise_perturbed),
                    mise_perturbed_max = max(mise_perturbed)) %>% 
   as.data.frame()
-
-data_group_pi
 ```
 
 ### Subset Data
@@ -409,20 +354,56 @@ data_group_pi
 Finally, we create one subset of the data for each value of $\pi$. We do this because splitting the data across three plots, each with their own $\pi$, makes the visualisation more readable.
 
 ```{r}
-pi_025 = subset(data_group_pi, data_group_pi$pi == 0.25)
-pi_05 = subset(data_group_pi, data_group_pi$pi == 0.5)
-pi_075 = subset(data_group_pi, data_group_pi$pi == 0.75)
+pi_025 = subset(mise_data_group_pi, mise_data_group_pi$pi == 0.25)
+pi_05 = subset(mise_data_group_pi, mise_data_group_pi$pi == 0.5)
+pi_075 = subset(mise_data_group_pi, mise_data_group_pi$pi == 0.75)
 ```
 
-### Plot
-
+### Function to Plot Original and Perturbed MISE.
 ```{r}
-layout(matrix(c(1, 2, 3), ncol=1, nrow=3), heights=c(10, 10, 10), TRUE) 
-plot_n_eps(pi_025)
-plot_n_eps(pi_05)
-plot_n_eps(pi_075)a
+plot_multiple_mise = function(mise_data, main_title, pi) {
+  line_colours = rainbow_hcl(2)
+
+  mise_data_1 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.1)
+  mise_data_2 = subset(mise_data, mise_data$n == 100 & mise_data$eps == 0.001)
+  mise_data_3 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.1)
+  mise_data_4 = subset(mise_data, mise_data$n == 1000 & mise_data$eps == 0.001)
+
+  # Create a layout for the 4 plots and the common legend
+  layout(matrix(c(1,2,5,3,4,5), ncol=2, nrow=3), heights=c(6, 6, 2))
+
+  # Plot the 4 plots
+  plot_mise_values(mise_data_1, main = main_title, paste("n = 100, eps = 0.1, pi = ", pi), line_colours)
+  plot_mise_values(mise_data_2, main = main_title, paste("n = 100, eps = 0.001, pi = ", pi), line_colours)
+  plot_mise_values(mise_data_3, main = main_title, paste("n = 1000, eps = 0.1, pi = ", pi), line_colours)
+  plot_mise_values(mise_data_4, main = main_title, paste("n = 1000, eps = 0.001, pi = ", pi), line_colours)
+
+    # Plot the legend
+  par(mai=c(0,0,0,0))
+  plot.new()
+  legend("center",
+         legend = c(TeX("$MISE(p_X, \\hat{p}_{n,m})$"), TeX("$MISE(p_X, \\hat{q}_{\\epsilon, m})$")),
+         col = line_colours,
+         lwd = 3,
+         xpd = TRUE,
+         horiz = TRUE,
+         cex = 1,
+         seg.len=2)
+}
 ```
 
+### Plot pi = 0.25.
+```{r}
+plot_multiple_mise(pi_025, paste("MISE values over", M, "Simulations."), pi = 0.25)
+```
+### Plot pi = 0.5.
+```{r}
+plot_multiple_mise(pi_05, paste("MISE values over", M, "Simulations."), pi = 0.5)
+```
+### Plot pi = 0.75.
+```{r}
+plot_multiple_mise(pi_075, paste("MISE values over", M, "Simulations."), pi = 0.75)
+```
 ## 2.4 Bonus
 We want to perform some simulations to test whether our mechanism ensures $\epsilon$ differential privacy:
 ```{r}
@@ -434,7 +415,7 @@ for (i in 1:n.sim) {
   h = hist(rbeta(100000,10,10), breaks=10,plot=F)
   h$density = h$density/2
   h_p = l_perturbe(h,variance=8/eps^2)
-  
+
   diff = max( h$density[h_p$density!=0]/h_p$density[h_p$density!=0] )
   #plot(h, freq=F, c=rgb(1,0,0))
   #plot(h_p, freq=F, add=T, c= rgb(0,1,0,0.5))
