--- a/Stat4Race.Rmd
+++ b/Stat4Race.Rmd
@@ -77,11 +77,22 @@ That's also why we want to increase the size of samples per iteration $b^i$, as 
 We can now confront the output of our simulation with the $pdf$ of T, noticing that there's a good similarity between the two:
 
 ```{r}
-set.seed(2008201)
-
-T_var = sim(10000)
-hist(T_var, breaks = 10000, xlim=c(1,50), prob=T)
-curve(1/x/(x+1), col='orange', lwd=3, add=T)
+T_var = sim(runif(10000))
+hist(T_var, 
+     breaks = 1:100000, 
+     xlim=c(1,30), 
+     prob=T,
+     main = '10K samples simulation vs T')
+curve(1/x/(x+1), 
+      col='orange', 
+      lwd=3, add=T)
+legend('topright', 
+       legend=c(
+         expression(T %~% frac(1,x*(x+1))),
+         'simulation'),
+       col=c('orange', 'grey'),
+       lwd=3
+)
 ```
 
 
@@ -117,7 +128,6 @@ We can then compute some summaries over our simulations:
 ```{r}
 # read summaries from simulations on Google Colab
 df = read.csv('simulations.csv') 
-
 summaries <- df %>%
   group_by(size) %>%
   dplyr::summarize(
@@ -150,14 +160,20 @@ This is the time it takes, vs some linear function:
 
 ```{r}
 plot(
-    summaries[c('size', 'median_time')],
+    x = summaries$size,
+    y = summaries$median_time,
     type = "l", 
-    log='x',
+#    log='x',
     lwd=5, 
-    col='orchid', 
+    col='orange', 
     xlab='Population Size', 
     ylab='time [s]', 
     main='Time per size of input')
-curve(x/1e5, add=T, lwd=1, type='p', from=min(df$size), to=max(df$size))
+curve(x*3.7e-6, lwd=2, add=T, type='l', lty='dotdash', from=min(df$size), to=max(df$size))
+legend('topleft',
+       legend = c('linear time','simulation time'),
+       col = c('black', 'orange'),
+       lwd=4)
+
 ```
 
